fix(ui-calendar,ui-date-input,ui-table): align week labels in center
Reviewed-on: https://gerrit.instructure.com/189190
Tested-by: Jenkins
Product-Review: Jennifer Stern <jstern@instructure.com>
QA-Review: Daniel Sasaki <dsasaki@instructure.com>
Visual-Regression-Test: Kevin Qiu <kqiu@instructure.com>

--- a/packages/ui-calendar/src/components/Calendar/styles.css
+++ b/packages/ui-calendar/src/components/Calendar/styles.css
@@ -39,5 +39,6 @@
 }
 
 .weekdayHeader {
+  text-align: center;
   max-width: var(--maxHeaderWidth);
 }
